--- a/containers/rpi/Containerfile
+++ b/containers/rpi/Containerfile
@@ -17,4 +17,4 @@ RUN if test -z "$sshpubkey"; then echo "must provide sshpubkey"; exit 1; fi; \
 
 RUN set -eu; mkdir -p /usr/ssh && \
     echo 'AuthorizedKeysFile /usr/ssh/%u.keys .ssh/authorized_keys .ssh/authorized_keys2' >> /etc/ssh/sshd_config.d/30-auth-system.conf && \
-    echo ${sshpubkey} > /usr/ssh/root.keys && chmod 0600 /usr/ssh/root.keys
+    echo "${sshpubkey}" > /usr/ssh/root.keys && chmod 0600 /usr/ssh/root.keys
