Updating the Raspberry Pi bootable container image
Adding some instructions for building and deploying the bootable
container image on a Raspberry Pi.

Also, adding the libedgetpu shared object file to the container build so
the squirrel-away squirrel detector can hand off AI inferencing to the
Coral Edge TPU.  More changes to come!

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ training/**/*pycache*/**
 inferencing/build
 inferencing/**/*egg*/**
 inferencing/**/*pycache*/**
+containers/rpi/var/lib/edgetpu/lib/libedgetpu*
