--- a/containers/rpi/Containerfile
+++ b/containers/rpi/Containerfile
@@ -18,3 +18,7 @@ RUN if test -z "$sshpubkey"; then echo "must provide sshpubkey"; exit 1; fi; \
 RUN set -eu; mkdir -p /usr/ssh && \
     echo 'AuthorizedKeysFile /usr/ssh/%u.keys .ssh/authorized_keys .ssh/authorized_keys2' >> /etc/ssh/sshd_config.d/30-auth-system.conf && \
     echo "${sshpubkey}" > /usr/ssh/root.keys && chmod 0600 /usr/ssh/root.keys
+
+# Copy the aarch64 libedgetpu.so file to ./var/lib/edgetpu/lib/
+# This will be available to the inferencing code
+COPY var/ /var/
