--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@ training/**/*pycache*/**
 inferencing/build
 inferencing/**/*egg*/**
 inferencing/**/*pycache*/**
-containers/rpi/usr/lib/libedgetpu*
+containers/rpi/usr/lib/edgetpu/libedgetpu*
+# create this symlink when downloading training/test data
+containers/rpi/files/testdata
