Updates to inferencing logic
1. Officially removing and abandoning anything to do with pycoral, which
   is a dead project.
2. Moved to using ai-edge-tflite directory for inferencing.
3. Cleaned up config, effectively copying what's in training.
   Eventually this can be unified into a single reusable config for both
   subprojects.  But, for now, copy/paste reuse.

--- a/inferencing/pyproject.toml
+++ b/inferencing/pyproject.toml
@@ -4,9 +4,9 @@ version = "0.0.1"
 description = "AI-based squirrel detection"
 authors = [{ name="Greg Blomquist", email="blomquisg@gmail.com"}]
 dependencies = [
-    "tflite-runtime",
     "numpy",
-    "pycoral"
+    "tensorflow-cpu",
+    "ai-edge-litert",
 ]
 requires-python = ">=3.8"
 
