Massive cleanup of Raspberry Pi Containerfile
1. Added some DNF configs to attempt some speed up.  Not really seeing
   any speed up, though.  My next move will likely be to figure out how
   to build this via github actions and publish to ghcr.  However, the
   dang libedgetpu.so file is a huge pain, and has to be built outside.
   So, there's not real way to pull that in during the Container build
   time.  Need to brainstorm how to make that SO file available.
2. Added image-capture logic along with installing package dependencies.
   This is all done via systemd services.  This will capture a new image
   every minute and make the image available to the Squirrel Detector
   inferencing logic.
3. Added some instructions for adding some testing data if you want to
   test inferencing directly on the RPi.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,11 @@ inferencing/build
 inferencing/dist
 inferencing/**/*egg*/**
 inferencing/**/*pycache*/**
+# The shared object file needs to be built and put in place manually
 containers/rpi/usr/lib/edgetpu/libedgetpu*
-# create this symlink when downloading training/test data
-containers/rpi/files/testdata
+# Ignore any data used for testing inferencing on the RPi
+containers/rpi/files/testdata/**/*.jpg
+containers/rpi/files/testdata/**/*.jpeg
+containers/rpi/files/testdata/**/*.png
+# The model should be trained and placed into this directory manually
+containers/rpi/files/model/*
