A lot of changes to the inferencing code
Since loading the libedgetpu interpreter takes so long, I changed the
inferencing logic to be able to perform inferencing all images in a
directory instead of a single image.  But, it also meant moving the
"handle a squirrel or no-squirrel image" in the python code instead of
externally.  I don't like this as much, because I really wanted the
inferencing to be as simple as possible.  But, whatever.

--- a/inferencing/pyproject.toml
+++ b/inferencing/pyproject.toml
@@ -5,10 +5,13 @@ description = "AI-based squirrel detection"
 authors = [{ name="Greg Blomquist", email="blomquisg@gmail.com"}]
 dependencies = [
     "numpy",
-    "tensorflow-cpu",
+    "tensorflow",
     "ai-edge-litert",
 ]
 requires-python = ">=3.8"
+
+[project.scripts]
+squirrel-away-detector = "detector.inference_tflite:main"
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
