--- a/inferencing/config/config.ini
+++ b/inferencing/config/config.ini
@@ -2,9 +2,12 @@
 base_dir = /etc/squirrel-away
 data_dir = ${base_dir}/data
 experiments_dir = ${base_dir}/experiments
-model_dir = ${experiments_dir}/trained/latest
+model_dir = /usr/share/squirrel-away/
 # where containers/rpi/Containerfile puts shared object file
 libedgetpu_so = /usr/lib/edgetpu/libedgetpu.so.1
+inference_dir = /var/lib/squirrel-away/inference
+no_squirrel_dir = ${inference_dir}/garbage
+squirrel_dir = ${inference_dir}/keep
 log_level = INFO
 log_stdout = False
 
@@ -15,5 +18,8 @@ data_dir = ${base_dir}/data
 experiments_dir = ${base_dir}/experiments
 model_dir = ${experiments_dir}/trained/latest
 libedgetpu_so = ~/code/google-coral/edgetpu/libedgetpu/direct/k8/libedgetpu.so.1
+inference_dir = ${data_dir}
+no_squirrel_dir = ${inference_dir}/garbage
+squirrel_dir = ${inference_dir}/keep
 log_level = DEBUG
 log_stdout = True
