--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,12 @@ inferencing/dist
 inferencing/**/*egg*/**
 inferencing/**/*pycache*/**
 # The shared object file needs to be built and put in place manually
-containers/rpi/usr/lib/edgetpu/libedgetpu*
+containers/rpi/files/image-inference/usr/lib/edgetpu
 # Ignore any data used for testing inferencing on the RPi
 containers/rpi/files/testdata/**/*.jpg
 containers/rpi/files/testdata/**/*.jpeg
 containers/rpi/files/testdata/**/*.png
 # The model should be trained and placed into this directory manually
-containers/rpi/files/model/*
+containers/rpi/build
+containers/inferencing/files/model
+containers/inferencing/files/wheel
